--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -50,12 +50,7 @@
         android:clipToPadding="false"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:cardElevation="5dp"
-            app:cardUseCompatPadding="true">
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -67,10 +62,21 @@
                     android:layout_height="wrap_content"
                     android:text="@string/sinopse"
                     android:padding="12dp"
-                    android:textSize="20sp"/>
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:layout_gravity="left" />
+                
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/text_sinopse"
+                    android:padding="12dp"
+                    android:textSize="18sp"
+                    android:layout_gravity="center_horizontal|center_vertical" />
 
             </LinearLayout>
-        </android.support.v7.widget.CardView>
+
 
     </android.support.v4.widget.NestedScrollView>
 
