--- a/app/src/main/res/layout/content_activity_list_genres.xml
+++ b/app/src/main/res/layout/content_activity_list_genres.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ActivityListGenres"
+    tools:context=".ListGenresActivity"
     tools:showIn="@layout/activity_list_genres"
     android:orientation="vertical">
 
