--- a/app/src/main/res/layout/row_genres.xml
+++ b/app/src/main/res/layout/row_genres.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:orientation="horizontal"
+    >
 
     <TextView
         android:id="@+id/TextViewGenre"
@@ -11,6 +12,8 @@
         android:layout_height="wrap_content"
         android:text="@string/teste_genero"
         android:textSize="25sp"
-        android:padding="@dimen/fab_margin"/>
+        android:textColor="@android:color/white"
+        android:padding="@dimen/fab_margin"
+        android:background="@drawable/background_list_genres"/>
 
 </LinearLayout>
